Added: ride details

--- a/Day_30_TDD_Problem/TesingOnPracticeProblem/TesingOnPracticeProblem.csproj
+++ b/Day_30_TDD_Problem/TesingOnPracticeProblem/TesingOnPracticeProblem.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Day_30_TDD_Problem\Day_30_TDD_Problem.csproj" />
+  </ItemGroup>
+
 </Project>
